--- a/HelloPrism/HelloPrism/Views/MainPage.xaml
+++ b/HelloPrism/HelloPrism/Views/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:HelloPrism"
-             x:Class="HelloPrism.MainPage">
+             x:Class="HelloPrism.Views.MainPage">
 
     <Label Text="{Binding TextForLabel}" 
            VerticalOptions="Center" 
