--- a/HelloPrism/HelloPrism/Views/MainPage.xaml
+++ b/HelloPrism/HelloPrism/Views/MainPage.xaml
@@ -3,9 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:HelloPrism"
              x:Class="HelloPrism.Views.MainPage">
+    <StackLayout>
+        <Label Text="{Binding WelcomeMessage}"
+               TextColor="{StaticResource BlackText}"
+               FontSize="18"
+               Margin="0,20"
+               HorizontalOptions="Center" />
+    </StackLayout>
 
-    <Label Text="{Binding TextForLabel}" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
 
 </ContentPage>
