--- a/HelloPrism/HelloPrism/Views/MainPage.xaml
+++ b/HelloPrism/HelloPrism/Views/MainPage.xaml
@@ -1,14 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:HelloPrism"
+             xmlns:local="clr-namespace:HelloPrism" xmlns:controls="clr-namespace:HelloPrism.Controls"
              x:Class="HelloPrism.Views.MainPage">
-    <StackLayout>
+    <StackLayout Margin="18,0">
         <Label Text="{Binding WelcomeMessage}"
                TextColor="{StaticResource BlackText}"
                FontSize="18"
                Margin="0,20"
                HorizontalOptions="Center" />
+
+        <Label Text="{Binding FirstNameLabel}"
+               Style="{StaticResource EntryLabelStyle}"/>
+
+        <controls:CustomEntry Text="{Binding FirstNameEntry}"
+                              BackgroundColor="{StaticResource EntryBackground}"
+                              HorizontalOptions="FillAndExpand"
+                              HeightRequest="40"
+                              Margin="0,0,0,10"/>
+
+        <Label Text="{Binding LastNameLabel}"
+               Style="{StaticResource EntryLabelStyle}"/>
+        <Label Text="{Binding EmailLabel}"
+               Style="{StaticResource EntryLabelStyle}"/>
+
+        <ContentView ControlTemplate="{StaticResource SubmitButton}" />
+
     </StackLayout>
 
 
