Finished Events page other then event component

--- a/HelloPrism/HelloPrism/App.xaml
+++ b/HelloPrism/HelloPrism/App.xaml
@@ -7,17 +7,23 @@
         <ResourceDictionary>
             <Color x:Key="BlackText">#FF000000</Color>
             <Color x:Key="ButtonPrimary">#FFB19595</Color>
-            <Color x:Key="EntryBackground">#FFF5F5F5</Color>
+            <Color x:Key="ContentBackground">#FFF5F5F5</Color>
 
             <Style x:Key="EntryLabelStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="14" />
                 <Setter Property="FontFamily" Value="Roboto" />
                 <Setter Property="TextColor" Value="{StaticResource BlackText}" />
-                <Setter Property="HorizontalOptions" Value="Start" />
+                <Setter Property="HorizontalTextAlignment" Value="Start" />
                 <Setter Property="Margin" Value="0,0,0,5" />
             </Style>
 
-            <ControlTemplate x:Key="SubmitButton">
+            <Style x:Key="EntryStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="Margin" Value="0,0,0,10" />
+                <Setter Property="HeightRequest" Value="40" />
+            </Style>
+
+            <ControlTemplate x:Key="PrimaryButton">
                 <Frame BindingContext="{TemplateBinding Parent.BindingContext}"
                        BackgroundColor="{StaticResource ButtonPrimary}"
                        CornerRadius="10"
@@ -25,7 +31,7 @@
                        HeightRequest="50"
                        Padding="0"
                        Margin="0">
-                    <Label Text="{Binding SubmitButtonLabel}"
+                    <Label Text="{Binding PrimaryButtonLabel}"
                            TextColor="{StaticResource BlackText}"
                            FontFamily="Roboto"
                            FontSize="16"
@@ -33,9 +39,18 @@
                            VerticalTextAlignment="Center"/>
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1"
-                                              Command="{Binding SubmitCommand}"/>
+                                              Command="{Binding PrimaryButtonCommand}"/>
                     </Frame.GestureRecognizers>
                 </Frame>
+            </ControlTemplate>
+
+            <ControlTemplate x:Key="PageHeader">
+               <Label BindingContext="{TemplateBinding Parent.BindingContext}"
+                      Text="{Binding HeaderLabel}"
+                      TextColor="{StaticResource BlackText}"
+                      FontSize="18"
+                      Margin="0,20"
+                      HorizontalOptions="Center" />
             </ControlTemplate>
 
         </ResourceDictionary>
