--- a/HelloPrism/HelloPrism/Views/EventsPage.xaml
+++ b/HelloPrism/HelloPrism/Views/EventsPage.xaml
@@ -15,24 +15,29 @@
                   ItemsSource="{Binding Events}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid HeightRequest="60">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="1" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="4*" />
-                            <ColumnDefinition Width="8*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Label Grid.Row="0" Grid.Column="0" Text="{Binding EventTypeLabel}" />
-                        <Label Grid.Row="1" Grid.Column="0" Text="{Binding EventType}" />
-                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding EventDateLabel}" />
-                        <Label Grid.Row="1" Grid.Column="1" Text="{Binding EventDate}" />
-                        <Image Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Source="sort_right.png" HeightRequest="15" HorizontalOptions="Center" VerticalOptions="Center" />
-                        <BoxView BackgroundColor="{StaticResource BlackText}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"/>
-                    </Grid>
+                    <ViewCell>
+                        <ViewCell.View>
+                            <Grid HeightRequest="60">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="1" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="4*" />
+                                    <ColumnDefinition Width="8*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding EventTypeLabel}" />
+                                <Label Grid.Row="1" Grid.Column="0" Text="{Binding EventType}" />
+                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding EventDateLabel}" />
+                                <Label Grid.Row="1" Grid.Column="1" Text="{Binding EventDate}" />
+                                <Image Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Source="sort_right.png" HeightRequest="15" HorizontalOptions="Center" VerticalOptions="Center" />
+                                <BoxView BackgroundColor="{StaticResource BlackText}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"/>
+                            </Grid>
+                        </ViewCell.View>
+                    </ViewCell>
+
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
