--- a/HelloPrism/HelloPrism/App.xaml
+++ b/HelloPrism/HelloPrism/App.xaml
@@ -2,13 +2,19 @@
 <prism:PrismApplication xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Unity;assembly=Prism.Unity.Forms"
+             xmlns:local="clr-namespace:HelloPrism.Converters"
              x:Class="HelloPrism.App">
     <prism:PrismApplication.Resources>
         <ResourceDictionary>
             <Color x:Key="BlackText">#FF000000</Color>
+            <Color x:Key="RedText">#FFFF0000</Color>
+            <Color x:Key="YellowText">#FFFFB800</Color>
             <Color x:Key="ButtonPrimary">#FFB19595</Color>
             <Color x:Key="ContentBackground">#FFF5F5F5</Color>
             <Color x:Key="HorizontalRule">#FFE5E5E5</Color>
+
+            <local:DateTimeToStringConverter x:Key="_dateTimeToStringConverter" />
+            <local:DateTimeToTextColorConverter x:Key="_dateTimeToTextColorConverter" />
 
             <Style x:Key="EntryLabelStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="14" />
